--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="nk-footer nk-footer-fluid bg-lighter">
             <div class="container-xl">
                 <div class="nk-footer-wrap">
-                    <div class="nk-footer-copyright"> © 2023 <a href="https://net.183000.xyz/">Whoami </a> <a href="https://net.183000.xyz"> 流量消失器</a>
+                    <div class="nk-footer-copyright"> © 2023 <a href="https://net.183000.xyz/">流量消耗器 </a> <a href="https://net.183000.xyz"> 流量消失器</a>
                     </div>
                 </div>
             </div>
