--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
                                 <div class="form-control-wrap">
                                     <select id='select' onchange="document.getElementById('link').value=this.options[this.selectedIndex].value;setCookie('select',this.selectedIndex,365);" type="text" class="form-control">
                     <option value="" id="diy">自定义</option>
-                    
-                    <option value="https://cachefly.cachefly.net/200mb.test">高速线路一Cachefly Test [Global]</option>
-                    <option value="https://speed.cloudflare.com/__down?bytes=1073741824">高速线路二Cloudflare Speed [Global]</option>
-                    <option value="https://zip.gitiray.my.id/200MB.zip">高速线路三Cloudflare CDN [Global]</option>
-                    <option value="https://t1.geigei.gq">高速线路四Cloudflare CDN [Global]</option>
+                    <option value="https://cachefly.cachefly.net/200mb.test">【高速线路一】Cachefly Test [Global]</option>
+                    <option value="https://speed.cloudflare.com/__down?bytes=1073741824">【高速线路二】Cloudflare Speed [Global]</option>
+                    <option value="https://zip.gitiray.my.id/200MB.zip">【高速线路三】Cloudflare CDN [Global]</option>
+                    <option value="https://t1.geigei.gq">【高速线路四】Cloudflare CDN [Global]</option>
                   </select>
                                     <input value="" oninput="document.getElementById('select').selectedIndex=0;document.getElementById('diy').value=this.value;setCookie('diy',this.value,365);setCookie('select',0,365);" type="text" id="link" placeholder="请输入下载链接" autocomplete="off" class="form-control">
                                 </div>
