--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <div class="col-sm-12 col-md-10 col-xl-8 center-block">
                     <div class="card card-preview">
                         <div class="card-inner mt-3">
-                            <div class="nya-title nk-ibx-action-item progress-rating"><span class="nk-menu-text font-weight-bold">网络面板</span></div>
-                            <div class="form-group"><label class="form-label">测试地址</label>
+                            <div class="nya-title nk-ibx-action-item progress-rating"><span class="nk-menu-text font-weight-bold">网络测试器</span></div>
+                            <div class="form-group"><label class="form-label">提示:根据实际需要，选择合适节点，如节点速度较慢，可以切换其他节点并加大线程。</label>
                                 <div class="form-control-wrap">
                                     <select id='select' onchange="document.getElementById('link').value=this.options[this.selectedIndex].value;setCookie('select',this.selectedIndex,365);" type="text" class="form-control">
                     <option value="https://speed.cloudflare.com/__down?bytes=1073741824">【高速线路一】Cachefly Test [Global]</option>
