--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>网络测试器</title>
+    <title>网络面板</title>
     <meta name="keywords" content="IP查询,IP归属查询,在线测速,网速测试,多地IP查询,流量杀手网页,流量杀手在线">
     <meta name="description" content="测试您的网速，多地查询您的IP地址，同时具备网络延迟实时检测">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -79,15 +79,34 @@
                 <div class="col-sm-12 col-md-10 col-xl-8 center-block">
                     <div class="card card-preview">
                         <div class="card-inner mt-3">
-                            <div class="nya-title nk-ibx-action-item progress-rating"><span class="nk-menu-text font-weight-bold">网络测试器</span></div>
-                            <div class="form-group"><label class="form-label">提示:根据实际需要，选择合适节点，如节点速度较慢，可以切换其他节点并加大线程。</label>
+                            <div class="nya-title nk-ibx-action-item progress-rating"><span class="nk-menu-text font-weight-bold">网络面板</span></div>
+                            <div class="form-group"><label class="form-label">测试地址</label>
                                 <div class="form-control-wrap">
                                     <select id='select' onchange="document.getElementById('link').value=this.options[this.selectedIndex].value;setCookie('select',this.selectedIndex,365);" type="text" class="form-control">
-                    <option value="https://speed.cloudflare.com/__down?bytes=1073741824">【高速线路一】Cachefly Test [Global]</option>
-                    <option value="https://cachefly.cachefly.net/200mb.test">【高速线路二】Cloudflare Speed [Global]</option>
-                    <option value="https://zip.gitiray.my.id/200MB.zip">【高速线路三】Cloudflare CDN [Global]</option>
-                    <option value="https://t1.geigei.gq">【高速线路四】Cloudflare CDN [Global]</option>
                     <option value="" id="diy">自定义</option>
+                    <option value="https://iptv.tsinghua.edu.cn/st_new_HB8/garbage.php?ckSize=10240">清华大学 [稳定]</option>
+                    <option selected="selected" value="https://mesh.if.iqiyi.com/player/upgrade/file/last/IQIYIsetup_app.exe">爱奇艺 [高速]</option>
+                    <option value="https://consumer.huawei.com/content/dam/huawei-cbg-site/cn/mkt/harmonyos-3/video/privacy/privacy-safe-center.webm">华为 [高速]</option>
+                    <option value="https://cd.pddpic.com/android_dev/2023-07-28/5c04772968aee57ca690fbe1e7f29467.apk">饼夕夕 [高速]</option>
+                    <option value="https://ma75.gdl.netease.com/Sky_Gold_0.11.2_224829_obt_netease_unisec_minify_7247988dfc278855ee8057f609157a4f.apk">网易 [高速]</option>
+                    <option value="https://storage.jd.com/jdmobile/JDMALL-PC2.apk">京东 [高速]</option>
+                    <option value="https://f100.g.mi.com/download/AppStore/09b005af75fff45bd88ff8f37d7910ba550d32a07">小米 [高速]</option>
+                    <option value="https://issuecdn.baidupcs.com/issue/netdisk/yunguanjia/BaiduNetdisk_7.30.5.2.exe">百度CDN</option>
+                    <option value="https://issuepcdn.baidupcs.com/issue/netdisk/yunguanjia/BaiduNetdisk_7.30.5.2.exe">百度PCDN</option>
+                    <option value="https://img.alicdn.com/imgextra/i1/O1CN01xA4P9S1JsW2WEg0e1_!!6000000001084-2-tps-2880-560.png">阿里CDN</option>
+                    <option value="https://game.gtimg.cn/images/nz/web202106/index/bc_part1.gif?0.3190485611376561">腾讯CDN</option>
+                    <option value="https://www.douyin.com/download/pc/obj/douyin-pc-client/7044145585217083655/releases/10715336/2.6.0/win32-ia32/douyin-v2.6.0-win32-ia32-douyinDownload1.exe">字节跳动</option>
+                    <option value="https://wwwstatic.vivo.com.cn/vivoportal/files/resource/funtouch/1651200648928/images/os2-jude-video.mp4">Vivo</option>
+                    <option value="https://d.musicapp.migu.cn/upload/fbpt_rsync_apps/local/signed/MobileMusic7300/MobileMusic7300_014000D.apk">咪咕音乐</option>
+                    <option value="https://img.cmvideo.cn/publish/noms/2022/10/14/1O3VIGPVP6HTS.jpg">咪咕视频</option>
+                    <option value="https://img.mcloud.139.com/material_prod/material_media/20221128/1669626861087.png">和彩云-图片资源</option>
+                    <option value="https://download.mcloud.139.com/storageWeb/servlet/downloadServlet?code=S0ExODExZDZ2Q2sxOUUwODcxN3R4c2p2dVp6&un=4962380EA7F64573A969487EB24F9EA36830835FDA0DF87F8ABEA5CBD0D1B18A&dom=D961&rate=0&txType=0">和彩云-文件下载</option>
+                    <option value="https://download4.caiyun.feixin.10086.cn/storageWeb/servlet/downloadServlet?code=SzAxODExZDZ2Q2sxOUUwOTQxN3R4c2p3ME8y&un=9591086B864FA9FA87FB2CAC03FB79C719A9F77EF59CF2A8C6D9237DEACA7F77&dom=D970&rate=0&txType=0">中国移动</option>
+                    <option value="https://vod-origin-rjzy.gdoss.xstore.ctyun.cn/07da9eb52ad948c7b58b760003c0006b.mp4">天翼云</option>
+                    <option value="https://cachefly.cachefly.net/200mb.test">Cachefly Test [Global]</option>
+                    <option value="https://speed.cloudflare.com/__down?bytes=1073741824">Cloudflare Speed [Global]</option>
+                    <option value="https://zip.gitiray.my.id/200MB.zip">Cloudflare CDN [Global]</option>
+                    <option value="https://t1.geigei.gq">Cloudflare CDN [Global]</option>
                   </select>
                                     <input value="" oninput="document.getElementById('select').selectedIndex=0;document.getElementById('diy').value=this.value;setCookie('diy',this.value,365);setCookie('select',0,365);" type="text" id="link" placeholder="请输入下载链接" autocomplete="off" class="form-control">
                                 </div>
@@ -162,7 +181,7 @@
         <div class="nk-footer nk-footer-fluid bg-lighter">
             <div class="container-xl">
                 <div class="nk-footer-wrap">
-                    <div class="nk-footer-copyright"> © 2023 <a href="https://net.183000.xyz/">流量消耗器 </a> <a href="https://net.183000.xyz"> 流量消失器</a>
+                    <div class="nk-footer-copyright"> © 2023 <a href="https://net.183000.xyz/">Whoami </a> <a href="https://net.183000.xyz"> 流量消失器</a>
                     </div>
                 </div>
             </div>
