--- a/index.html
+++ b/index.html
@@ -177,6 +177,29 @@
                 </div>
             </div>
         </div>
+
+                    <div class="card card-preview">
+                        <div class="card-inner">
+                            <h6><em class="icon ni ni-info"></em>工具说明</h6>
+                            <div class="accordion-inner">
+
+				<p><b>消失器QQ频道：<a href="https://pd.qq.com/s/dxobqxanz" target="_blank">点此加入</a></p>
+			 <hr>
+				<p>虽支持可自定义地址，但无法请求非SSL链接、跨域链接</p>
+                <p>速度不满意？请尝试手动切换节点，加大运行线程</p>
+				<p>使用说明：如手机套餐内含有百度系、腾讯系、头条系、钉钉(阿里系等定向流量，可以通过使用相对应的测速源或手动填写免流的资源链接(如图片、apk、exe、txt、mp4、mp3、zip链接等等)，即可测试定向流量(不保证百分百准确)。如果是免流用户想测跳点，建议使用非定向的测速源。双不限用户可以直接使用本工具。另外也可以帮助用户通过流量消失完成一些需要使用多少流量才可以获得奖励的活动。<!--，如果你不是宽带、WIFI、双不限(不限流量不限速)、定向不限(最好先测试是否用的定向)用户，建议谨慎使用本工具，以免造成流量大量的消耗而产生相应的费用。--></p>
+				 <p>手机端挂后台一段时间后停止运行，请让当前浏览器页面或APP保持在前台运行或锁住当前程序，避免被手机自动清理</p>
+				 <p>本工具完全免费使用！</p>
+
+                                
+                                </li>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <!-- content @d -->
         <div class="nk-footer nk-footer-fluid bg-lighter">
             <div class="container-xl">
