--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                     <a style="pointer-events:none;" id="ipgb">Loading...</a>
                                     <a style="pointer-events:none;float: right;" id="laygb">-ms</a>
                                 </li>
-				<p><b>消失器QQ频道：<a href="https://pd.qq.com/s/dxobqxanz" target="_blank">点此加入</a></p>
+				<p><b>消失器QQ频道：<a href="https://pd.qq.com/s/dxobqxanz" target="_blank">点此加入</a></b></p>
 			 <hr>
 				<p>虽支持可自定义地址，但无法请求非SSL链接、跨域链接</p>
                 <p>速度不满意？请尝试手动切换节点，加大运行线程</p>
