--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                     <a style="pointer-events:none;float: right;" id="laygb">-ms</a>
                                 </li>
 				    <hr>
-				<p><b>消失器QQ频道：<a href="https://pd.qq.com/s/dxobqxanz" target="_blank">点此加入</a></b></p>
+				<p><b>消失器QQ频道：<a href="https://pd.qq.com/s/dxobqxanz" target="_blank">点此加入</a></b><br><b>消失器微信交流群：<a href="https://h5.clewm.net/?url=qr61.cn/oRvRS9/qXnSKoP" target="_blank">点此加入</a></b></p>
 			 <hr>
 				<p>虽支持可自定义地址，但无法请求非SSL链接、跨域链接</p>
                 <p>速度不满意？请尝试手动切换节点，加大运行线程</p>
