--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <option value="https://cachefly.cachefly.net/200mb.test">Cachefly Test [Global]</option>
                     <option value="https://speed.cloudflare.com/__down?bytes=1073741824">Cloudflare Speed [Global]</option>
                     <option value="https://zip.gitiray.my.id/200MB.zip">Cloudflare CDN [Global]</option>
-                    <option value="https://t1.geigei.gq">Cloudflare CDN [Global]</option>
+                    <option value="http://speedtest.tokyo2.linode.com/100MB-tokyo.bin">日本东京</option>
                   </select>
                                     <input value="" oninput="document.getElementById('select').selectedIndex=0;document.getElementById('diy').value=this.value;setCookie('diy',this.value,365);setCookie('select',0,365);" type="text" id="link" placeholder="请输入下载链接" autocomplete="off" class="form-control">
                                 </div>
