--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                     <a style="pointer-events:none;float: right;" id="laygb">-ms</a>
                                 </li>
 				    <hr>
-				<p><b>交流反馈<a href="https://pd.qq.com/s/dxobqxanz" target="_blank">点此加入</a></b></p>
+				<p><b>简单说明<a href="#" target="_blank">.</a></b></p>
 			 
 				<p>虽支持可自定义地址，但无法请求非SSL链接、跨域链接</p>
                 <p>速度不满意？请尝试手动切换节点，加大运行线程</p>
